fix text alignment

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -29,6 +29,6 @@
 }
 
 
-.article-container {
+.article-container p {
 	text-align: justify;
 }
